<resources>
    <string name="app_name">E_Commerce</string>

    <!--Introduction-->
    <string name="access_wherever">Acesse de onde estiver e na hora que quiser</string>
    <string name="the_right_address">O endereço certo para fazer compras a qualquer hora</string>
    <string name="text_btn_start">Iniciar</string>

    <!--Account Options-->
    <string name="quality">Agora ficou muito fácil alcançar a melhor qualidade entre os produtos da internet!</string>
    <string name="you_can_choose">Aqui você pode escolher à vontade</string>

    <!--Register-->
    <string name="text_create_account">Crie sua conta</string>
    <string name="do_you_have_an_account_log_in">Já tem uma conta? Log in</string>
    <string name="edit_first_name">Primeiro nome</string>
    <string name="edit_last_name">Último nome</string>
    <string name="text_btn_register">Cadastrar</string>
    <string name="text_btn_loading_register">Aguarde...</string>
    <string name="tv_register">Faça seu cadastro</string>

    <!--Login-->
    <string name="edit_password">Senha</string>
    <string name="edit_email">E-mail</string>
    <string name="tv_dont_have_account">Ainda não tem uma conta? Cadastre-se.</string>
    <string name="tv_forgot_password">Esqueceu sua senha?</string>
    <string name="tv_login_account">Faça login na sua conta</string>
    <string name="text_btn_login">Login</string>
    <string name="text_btn_loading_login">Aguarde...</string>
    <string name="tv_reset_password">Recuperar Senha</string>
    <string name="tv_send_link_reset_password">Nós enviaremos o link para redefinição da sua senha para o e-mail informado.</string>
    <string name="buttonCancelResetPasswordDialog">Cancelar</string>
    <string name="buttonSendResetPasswordDialog">Enviar</string>
    <string name="menu_bottom_navigation_home">Início</string>
    <string name="menu_bottom_navigation_search">Procurar</string>
    <string name="menu_bottom_navigation_cart">Compras</string>
    <string name="menu_bottom_navigation_profile">Perfil</string>
    <string name="tvSearch">Buscar...</string>
    <string name="tv_best_deals">Melhores Negócios</string>
    <string name="tv_best_products">Melhores Produtos</string>
    <string name="scotch_premium">Scotch Premium</string>
    <string name="see_product">ver produto</string>
    <string name="nome_do_produto">Nome do Produto</string>
    <string name="price_product_details">R$ 600,00</string>
    <string name="product_details_color">Cor</string>
    <string name="tv_product_size">Tamanho</string>

    <!--Details-->
    <string name="text_btn_add_to_cart">Adicionar ao carrinho</string>
    <string name="tv_size_details">P</string>
</resources>