<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/blury_background"
        android:scaleType="centerCrop"/>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h3"
            android:layout_marginTop="60dp"
            app:drawableStartCompat="@drawable/ic_shopping_cart"
            android:drawablePadding="6dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/app_name"/>

        <ImageView
            android:id="@+id/logomarca"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:src="@drawable/lojinha"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAppName" />

        <TextView
            android:id="@+id/tvRegisterRegister"
            android:textSize="22sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_thin"
            android:layout_width="283dp"
            android:layout_height="148dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/quality"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/logomarca"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="@+id/logomarca"
            app:layout_constraintTop_toBottomOf="@+id/logomarca" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonRegisterAccountOptions"
            android:layout_width="@dimen/largeButtonWidth"
            android:layout_height="@dimen/smallButtonHeight"
            style="@style/whiteButtonStyle"
            app:layout_constraintTop_toBottomOf="@+id/tvRegisterRegister"
            app:layout_constraintStart_toStartOf="@+id/tvRegisterRegister"
            app:layout_constraintEnd_toEndOf="@+id/tvRegisterRegister"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/text_btn_register"/>

        <!--
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonLoginAccountOptions"
            android:layout_width="@dimen/largeButtonWidth"
            android:layout_height="@dimen/smallButtonHeight"
            style="@style/whiteButtonStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/logomarca"
            app:layout_constraintStart_toStartOf="@+id/logomarca"
            app:layout_constraintTop_toBottomOf="@+id/buttonRegisterAccountOptions"
            android:text="@string/text_btn_login"/>
        -->

        <com.denise.castro.e_commerce.util.customview.ProgressButton
            android:id="@+id/buttonLoginAccountOptions"
            android:layout_width="@dimen/largeButtonWidth"
            android:layout_height="@dimen/smallButtonHeight"
            style="@style/whiteButtonStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/logomarca"
            app:layout_constraintStart_toStartOf="@+id/logomarca"
            app:layout_constraintTop_toBottomOf="@+id/buttonRegisterAccountOptions"
            app:progress_button_title="@string/text_btn_login"
            app:progress_button_loading_title="@string/text_btn_loading_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>