<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/poppins_thin"
        android:text="@string/tv_reset_password"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvSendLinkResetPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/tv_send_link_reset_password"
        android:textColor="@color/g_black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvResetPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResetPassword"/>

    <EditText
        android:id="@+id/editResetPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@id/tvSendLinkResetPassword"
        app:layout_constraintEnd_toEndOf="@id/tvSendLinkResetPassword"
        app:layout_constraintTop_toBottomOf="@id/tvSendLinkResetPassword"
        tools:ignore="TextFields" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/editResetPassword"
        app:layout_constraintEnd_toEndOf="@id/editResetPassword"
        app:layout_constraintTop_toBottomOf="@id/editResetPassword">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonCancelResetPassword"
            android:layout_width="@dimen/mediumButtonWidth"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/white_background"
            android:text="@string/buttonCancelResetPasswordDialog"
            android:textAllCaps="false"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSendResetPassword"
            android:layout_width="@dimen/mediumButtonWidth"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@drawable/blue_background"
            android:text="@string/buttonSendResetPasswordDialog"
            android:textAllCaps="false"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>